wrap loop in updatecollection function and make form create book in collection array

--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,52 @@
     --primary-color: #2e9c21;
     --border-bottom-style: 1px solid rgba(67, 69, 78, 0.4);
     --border-bottom-style-focus: 1px solid rgba(67, 69, 78, 0.8);
+    --text-color: #1e1e1e;
+    --background-color: #f1f1f1;
     background-color: #f1f1f1;
     font-family: "forma-djr-micro", sans-serif;
     margin: 0;
     padding: 0;
 }
 
+body {
+    display: grid;
+    height: 100vh;
+    margin: 0 2rem;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 8fr;
+}
+
+/** Header **/
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
 #add-book {
     background-color: var(--primary-color) !important;
     color: #f1f1f1 !important;
-
 }
+
+/** Main **/
+
+#card-container {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    border: 1px solid var(--primary-color);
+    padding: 4px;
+}
+
+.card {
+    font-weight: 500;
+    border: 1px solid var(--text-color);
+    padding: 2rem;
+}
+
+/** Modal **/
 
 .workaround-micro-bug {
     background: transparent;
@@ -31,7 +66,7 @@
 }
 
 .modal__container {
-    background-color: #f1f1f1;
+    background-color: var(--background-color);
     padding: 30px;
     max-width: 500px;
     max-height: 100vh;
@@ -85,8 +120,8 @@
     padding-right: 1rem;
     padding-top: .5rem;
     padding-bottom: .5rem;
-    background-color: #e6e6e6;
     color: var(--text-color);
+    background-color: rgb(222, 222, 222);
     border-radius: .25rem;
     border-style: none;
     border-width: 0;
@@ -116,7 +151,7 @@
 
 .modal__btn-primary {
     background-color: var(--primary-color);
-    color: #fff;
+    color: var(--background-color);
 }
 
 button#add-book:before {
@@ -150,20 +185,31 @@ legend {
     max-width: 40rem;
 }
 
+.checkbox-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 0.3em;
+}
+
 div>label {
-    position: absolute;
-    top: 8px;
-    left: 0;
-    color: var(--text-color);
-    pointer-events: none;
-    transform-origin: left center;
-    transition: transform 0.25s;
     opacity: 0.99;
     font-size: 0.9em;
     font-weight: 400;
+    color: var(--text-color);
+    pointer-events: none;
 }
 
-div>input,
+div>label:not([for="read"]) {
+    position: absolute;
+    top: 8px;
+    left: 0;
+    transform-origin: left center;
+    transition: transform .25s;
+}
+
+div>input[type="text"],
 .input {
     font-size: 1em;
     min-width: 240px;
