--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,10 @@ header h1 {
     font-variation-settings: "wght"500;
 }
 
+h2 {
+    font-variation-settings: "wght"400;
+}
+
 #add-book {
     background-color: var(--primary-color) !important;
     color: #f1f1f1 !important;
@@ -109,7 +113,7 @@ header h1 {
 }
 
 .title-year-container p:nth-child(1) {
-    font-weight: 700;
+    font-variation-settings: "wght"400;
     font-size: 1.2rem;
 }
 
